fix nav bar to remove links on tablets and mobile views and transparent background

--- a/src/nav-bar/navigation.css
+++ b/src/nav-bar/navigation.css
@@ -47,10 +47,12 @@
 
 
 
-/*-----------SMALL MOBILE------------*/
-@media screen and (max-width: 640px) and (min-width: 319px){ 
+/*-----------LAPTOP and MOBILE------------*/
+@media screen and (max-width: 1024px) and (min-width: 100px){ 
     .nav-bar {
         position: fixed;
+        background-color: rgba(0,0,0,.2);
+        background-image: none;
     }
     .nav-links {
         display: none;
